@@ -85,6 +85,8 @@ Version 1.4.0
 
 Version 1.4.1
 
-+ Overrode toString() methods of all Iterables
+* Overrode toString() methods of all Iterables
 
 * Fixed CycleIterator#hasNext bug
+
+* Fixed EachLineIterator#next bug
